Moved app folder out. Updated breadcrumb

--- a/content/home/main.html
+++ b/content/home/main.html
@@ -1,4 +1,11 @@
-<h1 class="mt-4 display-4">Kodi / LibreELEC</h1>
+<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="..">Tech</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Kodi</li>
+  </ol>
+</nav>
+
+<h1 class="display-4">Kodi / LibreELEC</h1>
 <p class="mt-3">Kodi is an award-winning free and open source (GPL) software media player and entertainment hub that can be installed on Linux, OSX, Windows, iOS, tvOS and Android. It is designed around a "10-foot user interface" for use with televisions and remote controls.</p>
 
 <img src="content/home/libreelec_welcome_1.jpg" class="img-fluid mx-auto d-block" alt="LibreELEC welcome screen in Kodi">
