--- a/sidebar.html
+++ b/sidebar.html
@@ -7,6 +7,7 @@
     <ul class="collapse list-unstyled" id="subMenu1">
       <li><a href="#" onclick="loadPage('content/configuration/libreelec.html')" id="linkcontent/configuration/libreelec">LibreELEC</a></li>
       <li><a href="#" onclick="loadPage('content/configuration/kodi.html')" id="linkcontent/configuration/kodi">Kodi</a></li>
+      <li><a href="#" onclick="loadPage('content/configuration/remote_control.html')" id="linkcontent/configuration/remote_control">Remote Control</a></li>
     </ul>
   </li>
 
