--- a/content/configuration/remote_control.html
+++ b/content/configuration/remote_control.html
@@ -3,21 +3,21 @@
     <li class="breadcrumb-item"><a href="..">Tech</a></li>
     <li class="breadcrumb-item"><a href="#" onclick="loadPage('content/home/main.html')">Kodi</a></li>
     <li class="breadcrumb-item"><a href="#" onclick="loadPage('content/configuration/main.html')">Configuration</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Kodi</li>
+    <li class="breadcrumb-item active" aria-current="page">Remote Controls</li>
   </ol>
 </nav>
 
-<h1 class="display-4">Kodi</h1>
-<p class="mt-3">After installing LibreELEC on a computer Kodi will start. The following explain how Kodi is configured to play media on TVs.</p>
+<h1 class="display-4">Remote Controls</h1>
+<p class="mt-3">Using Kodi requires using a remote control...</p>
 
 <pre>
-  - Name
-  - Sources
-  - Skin
-    - Shelves
+  - Official Kodi remote-control app
+  - Dedicated remotes (Logitech Harmony, etc.)
+  - Web interface
+    - Screenshots
   
   </pre>
   
 
-<p class="footnote mt-5">kodi/content/configuration/kodi.html</p>
+<p class="footnote mt-5">kodi/content/configuration/remote_control.html</p>
 
