--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <!-- <link rel="stylesheet" type="text/css" href="app/bootstrap-icons.min.css"> -->
-  <link rel="stylesheet" type="text/css" href="app/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="app/styles.css?v=41">
+  <link rel="stylesheet" type="text/css" href="../app/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../app/styles.css?v=41">
 
   <style>
 
@@ -41,10 +41,18 @@
 
 
   <!-- Load the sidebar and content with JavaScript -->
-  <script src="app/load-content.js?v=147"></script>
+  <script src="../app/load-content.js?v=147"></script>
 
   <!-- Bootstrap JS -->
-  <script src="app/bootstrap.bundle.min.js"></script>
+  <script src="../app/bootstrap.bundle.min.js"></script>
  
+  <script>
+    // Load a default HTML file when the page loads
+    window.onload = function() {
+      console.log('JCH - Loading home page');
+      loadPage('content/home/main.html'); 
+    };
+  </script>
+
 </body>
 </html>
