--- a/content/maintenance/main.html
+++ b/content/maintenance/main.html
@@ -2,28 +2,29 @@
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="..">Tech</a></li>
     <li class="breadcrumb-item"><a href="#" onclick="loadPage('content/home/main.html')">Kodi</a></li>
-    <li class="breadcrumb-item"><a href="#" onclick="loadPage('content/media/main.html')">Media Library</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Library Content</li>
+    <li class="breadcrumb-item active" aria-current="page">Maintenance</li>
   </ol>
 </nav>
 
-<h1 class="display-4">Library Content</h1>
-<p class="mt-3">Media files in Kodi's library...</p>
+<h1 class="display-4">Maintenance</h1>
+<p class="mt-3">...</p>
 
 <pre>
+  - Media quality vs size
+  - Folder structure of media  
+  - Sonarr/Radarr
   - Kodi Library
     - updating
     - cleaning
-  - Movies
-    - Sets
-  - TV shows
-    - Combining shows (simulating "sets")
-    - Trakt
-  - Playlists
-    - Smart vs m3u
-  
+  - Sources
+
 </pre>
 
 
-<p class="footnote mt-5">kodi/content/media/library.html</p>
+<h4 class="mt-4">SECTION TITLE</h4>
+<p class="mt-2">DESCRIPTION</p>
+
+
+
+<p class="footnote mt-5">kodi/content/maintenance/main.html</p>
 
