--- a/sidebar.html
+++ b/sidebar.html
@@ -18,27 +18,31 @@
       <li><a href="#" onclick="loadPage('content/media/library.html')" id="linkcontent/media/library">Library Content</a></li>
       <li><a href="#" onclick="loadPage('content/media/other.html')" id="linkcontent/media/other">Non-library Content</a></li>
       <li><a href="#" onclick="loadPage('content/media/holidays.html')" id="linkcontent/media/holidays">Holiday Content</a></li>
-<!--// 
-
-      <li><a href="#subMenu1-0" data-bs-toggle="collapse" aria-expanded="false" aria-controls="subMenu1-0" class="dropdown-toggle" onclick="loadPage('content/media/library.html')" id="linkcontent/media/library">Library Content</a></li>
-      <li><ul class="collapse list-unstyled" id="subMenu1-0">
-        <li><a href="#" onclick="loadPage('content/configuration/tailscale.html')" id="linkcontent/configuration/tailscale">Tailscale</a></li>
-        <li><a href="#" onclick="loadPage('content/configuration/unraid_connect.html')" id="linkcontent/configuration/unraid_connect">Unraid Connect</a></li>
-
-      </ul></li>
-
-
-
-      <li><a href="#subMenu1-0" data-bs-toggle="collapse" aria-expanded="false" aria-controls="subMenu1-0" class="dropdown-toggle" onclick="loadPage('content/configuration/plugins.html')" id="linkcontent/configuration/plugins">Plugins</a></li>
-      <li><ul class="collapse list-unstyled" id="subMenu1-0">
-        <li><a href="#" onclick="loadPage('content/configuration/tailscale.html')" id="linkcontent/configuration/tailscale">Tailscale</a></li>
-        <li><a href="#" onclick="loadPage('content/configuration/unraid_connect.html')" id="linkcontent/configuration/unraid_connect">Unraid Connect</a></li>
-      </ul></li>
-//-->
-
-
     </ul>
   </li>
+
+  <!-- maintenance -->
+  <li><a href="#subMenu3" data-bs-toggle="collapse" aria-expanded="false" aria-controls="subMenu3" class="dropdown-toggle" onclick="loadPage('content/maintenance/main.html')" id="linkcontent/maintenance/main">Maintenance</a></li>
+  <li>
+    <ul class="collapse list-unstyled" id="subMenu3">
+      <li><a href="#" onclick="loadPage('content/maintenance/update.html')" id="linkcontent/maintenance/update">Updating LibreELEC</a></li>
+      <li><a href="#" onclick="loadPage('content/maintenance/backup.html')" id="linkcontent/maintenance/backup">Backups</a></li>
+      <li><a href="#" onclick="loadPage('content/maintenance/page3.html')" id="linkcontent/maintenance/page3">Page 3</a></li>
+    </ul>
+  </li>
+
+
+  <!-- Advanced -->
+  <li><a href="#subMenu4" data-bs-toggle="collapse" aria-expanded="false" aria-controls="subMenu4" class="dropdown-toggle" onclick="loadPage('content/advanced/main.html')" id="linkcontent/advanced/main">Advanced Topics</a></li>
+  <li>
+    <ul class="collapse list-unstyled" id="subMenu4">
+      <li><a href="#" onclick="loadPage('content/advanced/database.html')" id="linkcontent/advanced/update">Kodi Database</a></li>
+      <li><a href="#" onclick="loadPage('content/advanced/page2.html')" id="linkcontent/advanced/page2">Page 2</a></li>
+      <li><a href="#" onclick="loadPage('content/advanced/page3.html')" id="linkcontent/advanced/page3">Page 3</a></li>
+    </ul>
+  </li>
+
+
 
 
 </ul>
