--- a/content/configuration/main.html
+++ b/content/configuration/main.html
@@ -24,6 +24,9 @@
 </div>
 
 
+<h4 class="mt-4">Build Notes</h4>
+<p class="mt-2">You can view the notes used to configure the Kodi box <b>XBMC-2308</b> when it was built in 2023 clicking <a href="content/configuration/XBMC-2308-build-notes.txt" target="_blank">here</a>. A version exists on the server in the "Home" share.</p>
+
 
 
 <p class="footnote mt-5">kodi/content/configuration/main.html</p>
