--- a/content/maintenance/main.html
+++ b/content/maintenance/main.html
@@ -17,6 +17,9 @@
     - updating
     - cleaning
   - Sources
+  - Playlists
+    - Nothing displayed (check date)
+    - Missing shows (check tag)
 
 </pre>
 
