Added new Kodi boxes to table

--- a/content/configuration/libreelec.html
+++ b/content/configuration/libreelec.html
@@ -16,7 +16,7 @@
 <h4 class="mt-4">Installation</h4>
 <p class="mt-2">Installing LibreELEC is done by downloading the current version from the <a href="https://libreelec.tv/" target="blank">LibreELEC website</a> and writing the image to a thumbdrive. The easiest way to write the image is to use the <b>LibreELEC USB-SD Creator</b> from the LibreELEC downloads page on a computer running Windows. This tool will automatically download the selected version and write it to the thumbdrive you choose. Alternatively, you can download the image and write it to a USB drive manually in Linux.</p>
 
-<p class="mt-2">After flashing the image the thumbdrive is plugged into the <b>Beelink Mini S12 Pro</b> mini desktop computer. The computer boots off the flash drive when powered-on and guides you through installation.</p>
+<p class="mt-2">After flashing the image the thumbdrive is plugged into the <b>Beelink Mini S12 Pro</b> mini desktop computer. The computer boots off the flash drive when powered-on and guides you through installation. <b>This will replace the current operating system and files.</b> For example, the Beelink Mini PCs come with Windows 11 pre-installed. By installing LibreELEC you are overwriting Windows. This does not create a <i>dual-boot</i> device.</p>
 
 
 <h4 class="mt-4">Configuration</h4>
@@ -37,6 +37,14 @@
     <tr>
       <td class="nowrap">XBMC-2405</td>
       <td>Beelink mini computer in Charlotte installed in May 2024.</td>
+    </tr>
+    <tr>
+      <td class="nowrap">XBMC-2409</td>
+      <td>Beelink mini computer in Winston installed in October 2024. (pending)</td>
+    </tr>
+    <tr>
+      <td class="nowrap">XBMC-2411</td>
+      <td>Beelink mini computer in Bonus room installed in November 2024.</td>
     </tr>
 
   </tbody>
